# gsoc2025-PersonalAIs

./: .dockerignore  .env.local.example  .gitignore  BLOG.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yaml.example  mcp_servers_config.yaml  next.config.js  package.json  pnpm-lock.yaml  point_meta.json  pyproject.toml  result.json  tsconfig.json
BLOG/: blog.md
example/: python_simple_server.py  server.js
example/spotify/: profile.js
spotify_mcp_server/: .env.example  README.md  lastfm_client.py  llm_client.py  main.py  mcp_server.py  mood_detection_output_examples.json  mood_detection_prompt.txt  prompt.txt  result.json  spotify_client.py  test_lastfm.py  test_llm.py  test_mood_detection.py  test_recommend_tracks_demo.py  test_spotify.py
spotify_mcp_server/util/: debug.html  third_party_crawler.py
src/: middleware.ts
src/app/: action.ts  layout.tsx  page.tsx  store.ts
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/chat/: route.ts
src/app/api/point-meta/: route.ts
src/app/login/: page.tsx
src/components/: code-editor.tsx  document-preview.tsx  message-editor.tsx  message.tsx  text-editor.tsx
src/components/custom/: actions.tsx  cartesianplane.tsx  greeting.tsx  image-questionnaire.tsx  message.tsx  questionnaire.tsx  use-scroll-to-bottom.ts
src/components/spotify/: player.tsx  queue.tsx  user-profile.tsx
src/config/: spotify.ts
src/interfaces/: interfaces.ts
src/lib/: spotify.ts  utils.ts
src/lib/ai/: provider.ts
src/lib/editor/: functions.tsx  suggestions.tsx
