[project]
name = "gsoc2025-personalais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.9.2",
    "spotipy>=2.25.1",
    "tqdm>=4.67.1",
    "httpx>=0.27.0",
    "bs4>=0.0.2",
    "selenium>=4.34.0",
    "numpy>=2.3.2",
]
